card text wrapped in article but width still specified issue with button remains

--- a/src/style.css
+++ b/src/style.css
@@ -60,15 +60,11 @@ body {
   margin: 0;
   text-decoration: none;
   font-size: 12px;
-  padding: 22.5px 0;
+  padding: 23px 0;
   color: black;
 }
 
 .nav_tag:hover {
-  color: #00acdc;
-}
-
-.is-active {
   color: #00acdc;
 }
 
@@ -106,8 +102,12 @@ body {
   padding-top: 32px;
 }
 
+.card-info {
+  width: 166px;
+}
+
 .image-box {
-  margin: 0;
+  margin: 0 0 40px;
   padding: 0;
   width: 160px;
   height: 134px;
@@ -119,9 +119,8 @@ body {
 }
 
 .mac-model {
-  padding: 40px 0 0;
   margin: 0;
-  width: 166px;
+  width: 100%;
   font-size: 12px;
   font-weight: 500;
   line-height: 18px;
